--- a/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context="com.example.weuller.peladaesporteclube.LoginActivity">
 
     <ImageView
         android:layout_marginTop="20dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/futebol"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="8"/>
