criando tela de chat

--- a/PeladaEsporteClube/app/src/main/res/layout/activity_main.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,27 @@
     </LinearLayout>
 
     <Button
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
+        android:id="@+id/main_btnMap"
+        android:text="Quadras de Futebol"
+        android:background="#689F38"
+        android:textColor="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"/>
+
+    <Button
+        android:layout_marginTop="80dp"
+        android:id="@+id/main_btnChat"
+        android:text="Chat"
+        android:background="#689F38"
+        android:textColor="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"/>
+
+    <Button
+        android:layout_marginTop="80dp"
         android:id="@+id/main_btnExit"
         android:text="Sair"
         android:background="#689F38"
