--- a/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
@@ -30,6 +30,7 @@
             android:layout_weight="12"/>
 
         <Button
+            android:id="@+id/chat_btnSend"
             android:text="Enviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
