--- a/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
@@ -25,6 +25,7 @@
         android:layout_weight="1">
 
         <EditText
+            android:id="@+id/chat_edtMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="12"/>
