--- a/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,10 @@
 
         <EditText
             android:id="@+id/login_edtEmail"
-            android:hint="E-mail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/login_edtPassword"
