--- a/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
@@ -11,7 +11,7 @@
         android:layout_margin="10dp"
         android:textSize="20dp"
         android:gravity="center"
-        android:text="Quadra de Futebol 112 Sul"
+        android:text="--------------"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
