aprensentando botao de votar somente se for uma quadra sugerida

--- a/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
@@ -113,7 +113,8 @@
             android:gravity="center"
             android:text="Votar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
 
 
     </LinearLayout>
