--- a/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
@@ -17,15 +17,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
-    <DatePicker
+    <Button
+        android:id="@+id/btnTimePicker"
+        android:text="Time Picker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" />
 
-    </DatePicker>
+    <Button
+        android:id="@+id/btnDatePicker"
+        android:text="Date Picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <!--<TimePicker-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"></TimePicker>-->
+
 
 </LinearLayout>
