ajustes de data e hora

--- a/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
@@ -17,6 +17,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <!--Data-->
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="Data: "
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/schedule_football_edtDate"
+            android:text="          /          /          "
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp" />
+
+    </LinearLayout>
+
+    <!--Hora-->
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="Hora: "
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/schedule_football_edtTime"
+            android:text="          :                     "
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnTimePicker"
         android:text="Time Picker"
