--- a/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
@@ -89,12 +89,26 @@
     </LinearLayout>
 
     <Button
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:id="@+id/schedule_football_btnFindSuggested"
         android:text="Buscar quadras sugeridas"
         android:background="#689F38"
         android:textColor="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="Quadras sugeridas: "
+        android:layout_margin="10dp"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@+id/schedule_football_lstSuggested"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 
 </LinearLayout>
