--- a/PeladaEsporteClube/app/src/debug/res/values/google_maps_api.xml
+++ b/PeladaEsporteClube/app/src/debug/res/values/google_maps_api.xml
@@ -24,6 +24,9 @@
         <!--Descomentar linha abaixo para usar a chave para o Mac:-->
         <!--AIzaSyAAI8UJx7XHenrHhW-XqHw7gaspOdgSsoA-->
         <!--Descomentar linha abaixo para usar a chave para o Windows (Trabalho - Weuller):-->
-        AIzaSyBptET7LECaveFdpgabzBGqD1N6CqGxu1A
+        <!--AIzaSyBptET7LECaveFdpgabzBGqD1N6CqGxu1A-->
+        <!--Descomentar linha abaixo para usar a chave para o Ruwindows Ismael-->
+        AIzaSyCPDj6DRPrN8rrGtHvKKhnbz2GmpI9CpMM
+
     </string>
 </resources>
