--- a/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
@@ -111,4 +111,13 @@
         android:layout_height="wrap_content">
     </ListView>
 
+    <Button
+        android:layout_margin="10dp"
+        android:id="@+id/schedule_football_btnSchedule"
+        android:text="Marcar Futebol"
+        android:background="#689F38"
+        android:textColor="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
