--- a/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_schedule_football.xml
@@ -109,12 +109,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:weightSum="1">
 
             <TextView
-                android:text="Quadras sugeridas: "
+                android:text="Quadras sugeridas para votação: "
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
@@ -123,30 +123,40 @@
             <ListView
                 android:id="@+id/schedule_football_lstSuggested"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="116dp"
+                android:background="#EEEEEE"></ListView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/schedule_football_btnSchedule"
+                    android:text="Marcar Futebol"
+                    android:background="#689F38"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"/>
+
+                <Button
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/schedule_football_btnSeeInTheMap"
+                    android:text="Ver no Mapa"
+                    android:background="#689F38"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <Button
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:id="@+id/schedule_football_btnSchedule"
-            android:text="Marcar Futebol"
-            android:background="#689F38"
-            android:textColor="#FFFFFF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:id="@+id/schedule_football_btnSeeInTheMap"
-            android:text="Ver no Mapa"
-            android:background="#689F38"
-            android:textColor="#FFFFFF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
 
     </LinearLayout>
